--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,18 +85,43 @@
         android:id="@+id/editText26"
         android:layout_width="200dp"
         android:layout_height="40dp"
+        android:ems="8"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:text="60"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextHolder"
+        app:layout_constraintStart_toStartOf="@+id/editTextHolder"
+        app:layout_constraintTop_toBottomOf="@+id/editText24" />
+
+    <EditText
+        android:id="@+id/editTextHolder"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:ems="8"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:text="60"
+        android:text="0xfffffff"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/mint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText24" />
+        app:layout_constraintTop_toBottomOf="@+id/editText26" />
 
+    <TextView
+        android:id="@+id/textViewHolder"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="left|center_vertical"
+        android:text="Post Acess:"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/mint"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+    
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
@@ -105,7 +130,7 @@
         android:gravity="left|center_vertical"
         android:text="Post Acess:"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/mint"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHolder"
         app:layout_constraintStart_toStartOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -185,6 +210,7 @@
         app:layout_constraintStart_toStartOf="@+id/editText22"
         app:layout_constraintTop_toBottomOf="@+id/username5" />
 
+    <!--
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
@@ -197,6 +223,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.331"
         tools:layout_editor_absoluteX="275dp" />
+    -->
 
     <TextView
         android:id="@+id/textView"
