--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,7 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <EditText
-        android:id="@+id/username2"
+        android:id="@+id/editTextRedeemTime"
         android:layout_width="200dp"
         android:layout_height="40dp"
 
